# music-generator

./: .gitignore  PHASE_1_EASY_INSTALLATION.md  PHASE_2_PURE_PYTHON_AUDIO.md  PHASE_3_DIRECT_MP3_PIPELINE.md  PHASE_4_SMART_SOUNDFONT_MANAGEMENT.md  PHASE_5_ENHANCED_WEB_UI.md  QUICK_START.md  README.md  SETUP.md  claude.md  example_usage.py  mido_synthesis.py  pyproject.toml  test_melody.mid
.claude/: settings.local.json
.claude/commands/: start-dev.md
demo_run/test01/: report.txt
example_output/: input_sample.mid
example_output/input_sample/: report.txt
musicgen/: __init__.py  analysis.py  arrange.py  audio_types.py  cli.py  config.py  io_files.py  orchestration.py  pure_synthesis.py  synthesis.py  webui.py
my_custom_output/test02/: analysis.json  report.txt
test_out_fixed/input_sample/: report.txt
test_output_mido/test_melody/: report.txt
tests/: test_analysis.py  test_arrange.py  test_cli_smoke.py  test_webui_smoke.py
webui_output/generation_20250928_161642/input/: report.txt
webui_output/generation_20250928_161712/: input.mid
webui_output/generation_20250928_161712/input/: report.txt
